# perfumes

./: api.py  database.py  draft.ipynb  fetch.py  hello.py  models.py  perfumes.db  product.py  pyproject.toml  scraper.py  streamlit_app.py
assets/: products.csv  slugs.txt
llm_scraper/: url.py
