[project]
name = "perfumes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "fastapi>=0.115.4",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "sqlmodel>=0.0.22",
    "streamlit>=1.39.0",
    "tenacity>=9.0.0",
    "uvicorn>=0.32.0",
    "watchdog>=5.0.3",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
]
